--- a/swapi-backend/src/main/resources/application.properties
+++ b/swapi-backend/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.application.name=swapi-backend
 spring.main.allow-bean-definition-overriding=true
 server.port=8080
 swapi.base-url=https://www.swapi.tech/api
+spring.output.ansi.enabled=ALWAYS
+spring.main.banner-mode=off
+logging.level.root=INFO
+logging.level.org.springframework=OFF
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
